Se a estilizado la seccion de skills y hobbies

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
     <link rel="stylesheet" href="css/titulo/title-network.css">
     <link rel="stylesheet" href="css/titulo/title-network-item.css">
     <link rel="stylesheet" href="css/titulo/title-bio.css">
+    <link rel="stylesheet" href="css/about/about-container.css">
+    <link rel="stylesheet" href="css/about/about.css">
+    <link rel="stylesheet" href="css/about/about-titulo.css">
+    <link rel="stylesheet" href="css/about/about-paragraph.css">
+    <link rel="stylesheet" href="css/about/about-imagen.css">
+    <link rel="stylesheet" href="css/skill/skills.css">
+    <link rel="stylesheet" href="css/skill/skills-line.css">
+    <link rel="stylesheet" href="css/skill/skills-title.css">
+    <link rel="stylesheet" href="css/skill/skills-box.css">
+    <link rel="stylesheet" href="css/skill/skills-img.css">
+    <link rel="stylesheet" href="css/skill/skills-name.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies-line.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies-title.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies-box.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies-img.css">
+    <link rel="stylesheet" href="css/hobbie/hobbies-name.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Fonte del Proyecto Raleway -->
@@ -83,7 +100,7 @@
                     Suspendisse potenti. Ut semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas
                     metus vitae, aliquet metus.</p>
                 <!-- Si quieres, pon tú firma acá! -->
-                <img src="assets\signature.png">
+                <img class="about__imagen" src="assets\signature.png">
             </div>
         </section>
 
