se modificó el index.html y se actualizó la firma

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           especialida de Front-End; tambien estoy realizando el <strong> <a target="_blank" href="https://undefinedshell.notion.site/Empezar-el-Bootcamp-65ae9344add24764a2569f61c9e3bfc1"> Bootcamp de JavaScript Full-stack </a></strong> en <strong> <a target="_blank" href="https://undefined.academy/"> Undefined Academy</a></strong> con <a target="_blank" href="https://guillermorodas.com/"></a> <strong>Guillermo Rodas</strong>.
         </p>
         <!-- Si quieres, pon tú firma acá! -->
-        <img class="about__imagen" src="./assets/signature.png" alt="firma">
+        <img class="about__imagen" src="./assets/signature.svg" alt="firma">
       </div>
     </section>
 
@@ -645,8 +645,8 @@
     <!-- Sección de Footer -->
     <section class="footer">
       <div class="footer__rodapie">
-        <p>Desarrollado por Fulana de Tal</p>
-        <p>2022</p>
+        <p>Desarrollado por <strong>@nobody-redhawk</strong></p>
+        <p>2023</p>
       </div>
     </section>
   </main>
