--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </li>
 
             <li class="title__network__item__icon">
-              <a href="https://www.instagram.com/wigusa/" target="_blank" rel="noopener noreferrer">
+              <a href="https://web.facebook.com/gulcochiasanchez" target="_blank" rel="noopener noreferrer">
 
                 <i class="fa-brands fa-facebook"></i>
 
