Logo y nombre enlazados al inicio

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
   <main class="main">
     <section class="menu container">
       <header class="menu__header">
-        <img src="./assets/logo.png" class="menu__imagen" alt="logo">
-        <h1 class="menu__title">Wilmer Gulcochía</h1>
+        <a href="#" class="menu__home-link">
+          <img src="./assets/logo.png" class="menu__imagen" alt="logo">
+          <h1 class="menu__title">Wilmer Gulcochía</h1>
+        </a>
       </header>
       <nav>
         <ul class="menu__list">
