Logo y nombre alineados horizontalmente con flexbox

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <main class="main">
     <section class="menu container">
       <header class="menu__header">
-        <a href="#" class="menu__home-link">
+        <a href="#" class="menu__home-link" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none; color: inherit;">
           <img src="./assets/logo.png" class="menu__imagen" alt="logo">
           <h1 class="menu__title">Wilmer Gulcochía</h1>
         </a>
